# pwasm_token

./: Cargo.toml  README.md  account.js  build.sh  deploy.js  transfer.js
compiled/: TokenInterface.json  token-deployed.wasm  token.wasm
src/: lib.rs
