[package]
name = "pwasm-token-contract"
version = "0.1.0"
authors = ["Fang Gong <fang@oceanprotocol.com>"]

[dependencies]
pwasm-std = "0.6"
pwasm-ethereum = "0.3"
pwasm-abi = "0.1"
pwasm-abi-derive = "0.1"
tiny-keccak = "1.3"

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
